# chip8_interpreter

./: .gitignore  CMakeLists.txt  README.md
include/: SDLHandler.h  StateMachine.h  chip8.h  instructions.h
src/: SDLHandler.c  chip8.c  instructions.c  main  main.c
src/main.dSYM/Contents/Resources/DWARF/: main
